RESOLVED FIXED72423
[Chromium] Crash executing the WebGL conformance tests
https://bugs.webkit.org/show_bug.cgi?id=72423
Summary [Chromium] Crash executing the WebGL conformance tests
Jeff Timanus
Reported 2011-11-15 14:30:16 PST
During WebGLRenderingContext tear down, the WebGLLayerChromium is attempting to stop a timer for a NULL context. See chromium tracking issue here: crbug.com\104367
Attachments
Patch (1.87 KB, patch)
2011-11-15 14:33 PST, Jeff Timanus
no flags
Patch (2.05 KB, patch)
2011-11-15 16:25 PST, Jeff Timanus
no flags
Patch (2.05 KB, patch)
2011-11-15 16:33 PST, Jeff Timanus
no flags
Patch (2.03 KB, patch)
2011-11-15 16:47 PST, Jeff Timanus
no flags
Jeff Timanus
Comment 1 2011-11-15 14:33:06 PST
Jeff Timanus
Comment 2 2011-11-15 16:25:11 PST
Jeff Timanus
Comment 3 2011-11-15 16:33:30 PST
Kenneth Russell
Comment 4 2011-11-15 16:41:37 PST
Comment on attachment 115276 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115276&action=review Looks good to me; minor comment nit. Could you upload a final patch? Also, did you get an email about what the style failure is? (Did you upload with webkit-patch upload? That checks style before uploading.) > Source/WebCore/ChangeLog:4 > + [chromium] During tear down, prevent the WebGLLayerChromium instance > + from attempting to stop a timer for a NULL context. Does this need to be one line? > Source/WebCore/platform/graphics/chromium/WebGLLayerChromium.cpp:131 > + // The GraphicsContext3D used by the layer is the context associated with > + // with the drawing buffer. If the drawing buffer is changing, make sure with with -> with
Jeff Timanus
Comment 5 2011-11-15 16:47:37 PST
Jeff Timanus
Comment 6 2011-11-15 16:48:38 PST
Comment on attachment 115276 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115276&action=review >> Source/WebCore/ChangeLog:4 >> + from attempting to stop a timer for a NULL context. > > Does this need to be one line? Done. >> Source/WebCore/platform/graphics/chromium/WebGLLayerChromium.cpp:131 >> + // with the drawing buffer. If the drawing buffer is changing, make sure > > with with -> with Thanks for catching that. Done.
Jeff Timanus
Comment 7 2011-11-15 16:51:54 PST
(In reply to comment #4) > (From update of attachment 115276 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=115276&action=review > > Looks good to me; minor comment nit. Could you upload a final patch? Also, did you get an email about what the style failure is? (Did you upload with webkit-patch upload? That checks style before uploading.) Yes, I used webkit-patch upload to upload all of these patches. I also ran check-webkit-style before uploading. It reported no errors. I have yet to receive the style failure notification, so I'm not sure what is up. Fortunately, the most recent patch seems to be passing the style check. > > > Source/WebCore/ChangeLog:4 > > + [chromium] During tear down, prevent the WebGLLayerChromium instance > > + from attempting to stop a timer for a NULL context. > > Does this need to be one line? > > > Source/WebCore/platform/graphics/chromium/WebGLLayerChromium.cpp:131 > > + // The GraphicsContext3D used by the layer is the context associated with > > + // with the drawing buffer. If the drawing buffer is changing, make sure > > with with -> with
Kenneth Russell
Comment 8 2011-11-15 19:57:11 PST
Comment on attachment 115281 [details] Patch Looks good. r=me
WebKit Review Bot
Comment 9 2011-11-15 21:12:47 PST
Comment on attachment 115281 [details] Patch Clearing flags on attachment: 115281 Committed r100401: <http://trac.webkit.org/changeset/100401>
WebKit Review Bot
Comment 10 2011-11-15 21:12:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.