[chromium] During tear down, prevent the WebGLLayerChromium instance from attempting to stop a timer for a NULL context. https://bugs.webkit.org/show_bug.cgi?id=72423

Patch by Jeff Timanus <twiz@chromium.org> on 2011-11-15
Reviewed by Kenneth Russell.

* platform/graphics/chromium/WebGLLayerChromium.cpp:
(WebCore::WebGLLayerChromium::setDrawingBuffer):

Canonical link: https://commits.webkit.org/88932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100401 268f45cc-cd09-0410-ab3c-d52691b4dbfc